# Deneb

./: .detect-secrets.cfg  .dockerignore  .env.example  .gitattributes  .gitignore  .jscpd.json  .oxlintrc.json  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_EVALUATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.sandbox  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  EVALUATION.md  IMPROVEMENTS.md  Makefile  PYTHON_MIGRATION_PLAN.md  README.md  SECURITY.md  SOUL.md  TOOLS.md  USER.md  VISION.md  bootstrap.sh  code-quality-assessment.md  core.py  deneb.mjs  deneb.podman.env  deny.toml  docker-compose.yml  docker-setup.sh  docs.acp.md  (+24 more)
.agents/: maintainers.md
.claude/: launch.json  settings.local.json
cli-rs/: Cargo.toml
cli-rs/scripts/: install.sh
cli-rs/src/: bootstrap.rs  cli.rs  env.rs  errors.rs  main.rs  router.rs  version.rs
cli-rs/src/commands/: agent.rs  agents.rs  config_cmd.rs  configure.rs  dashboard.rs  doctor.rs  gateway_query.rs  health.rs  memory.rs  message.rs  mod.rs  onboard.rs  sessions.rs  setup.rs  status.rs
cli-rs/src/commands/agents/: list.rs  mod.rs  mutate.rs  render.rs  validate.rs
cli-rs/src/config/: io.rs  legacy_compat.rs  mod.rs  paths.rs  types.rs
cli-rs/src/gateway/: auth.rs  client.rs  connection.rs  mod.rs  protocol.rs
cli-rs/src/subcli/: acp.rs  approvals.rs  autonomous.rs  backup.rs  browser.rs  channels.rs  completion.rs  cron.rs  daemon.rs  devices.rs  directory.rs  docs.rs  gateway_cmd.rs  gateway_run.rs  hooks.rs  logs.rs  mod.rs  models.rs  nodes.rs  pairing.rs  plugins.rs  qr.rs  reset.rs  rpc_helpers.rs  sandbox.rs  secrets.rs  security.rs  skills.rs  system.rs  uninstall.rs  update.rs  webhooks.rs
cli-rs/src/terminal/: mod.rs  palette.rs  progress.rs  prompt.rs  symbols.rs  table.rs  theme.rs
cli-rs/tests/: cli_integration.rs  startup_bench.rs
core-rs/: CLAUDE.md  Cargo.toml  build.rs
core-rs-napi/: Cargo.toml  package-lock.json  package.json
core-rs-napi/src/: exif.rs  lib.rs  png.rs
core-rs/.cargo/: config.toml
core-rs/agent-runtime/: Cargo.toml  README.md
core-rs/agent-runtime/src/: bootstrap.rs  defaults.rs  embedded.rs  lib.rs  subagent.rs  usage.rs
core-rs/agent-runtime/src/model/: mod.rs  provider_id.rs  selection.rs
core-rs/agent-runtime/src/model/selection/: allowlist.rs  catalog.rs  keys.rs  mod.rs  normalize.rs  parse.rs  resolve.rs  thinking.rs  types.rs
core-rs/agent-runtime/src/scope/: mod.rs  resolve.rs
core-rs/agent-runtime/src/scope/resolve/: agent_ids.rs  config.rs  mod.rs  session_keys.rs
core-rs/core/: Cargo.toml  build.rs  package.json
core-rs/core/src/: exif.rs  external_content.rs  ffi_utils.rs  lib.rs  mime_utils.rs  png.rs  safe_regex.rs
core-rs/core/src/auth/: allowlist.rs  credentials.rs  middleware.rs  mod.rs  origin.rs  security_path.rs  token.rs
core-rs/core/src/compaction/: handle.rs  mod.rs  napi.rs  sweep.rs  tests.rs  timestamp.rs
core-rs/core/src/compaction/sweep/: condensed.rs  engine.rs  leaf.rs  mod.rs  tests.rs  types.rs
core-rs/core/src/config/: bootstrap.rs  dotenv.rs  legacy_compat.rs  loader.rs  mod.rs  paths.rs  runtime.rs  schema.rs  types.rs
core-rs/core/src/context_engine/: assembler.rs  handle.rs  mod.rs  napi.rs  retrieval.rs
core-rs/core/src/context_engine/retrieval/: describe.rs  expand.rs  grep.rs  mod.rs  tests.rs  types.rs
core-rs/core/src/ffi/: compaction.rs  context.rs  context_engine.rs  helpers.rs  markdown.rs  media.rs  memory.rs  memory_search.rs  ml.rs  mod.rs  parsing.rs  protocol.rs  security.rs  tests.rs  vega.rs
core-rs/core/src/markdown/: code_spans.rs  fences.rs  mod.rs  parser.rs  render.rs  render_state.rs  spans.rs  spoilers.rs  tables.rs
core-rs/core/src/markdown/parser/: mod.rs  tests.rs
core-rs/core/src/media/: extensions.rs  mod.rs
core-rs/core/src/memory_search/: bm25.rs  cosine.rs  fts.rs  merge.rs  mmr.rs  mod.rs  napi.rs  query_expansion.rs  stop_words.rs  temporal_decay.rs  types.rs
core-rs/core/src/memory_search/simd/: mod.rs  neon.rs  scalar.rs  sse2.rs
core-rs/core/src/parsing/: base64_util.rs  html_to_markdown.rs  media_tokens.rs  mod.rs  url_extract.rs
core-rs/core/src/parsing/html_to_markdown/: attrs.rs  emitter.rs  entities.rs  mod.rs  tests.rs  tokenizer.rs
core-rs/core/src/protocol/: agent.rs  connect.rs  constants.rs  error_codes.rs  gen.rs  mod.rs  plugin.rs  provider.rs  session.rs  validation.rs
core-rs/core/src/protocol/schemas/: agent.rs  agents_models_skills.rs  channels.rs  config.rs  cron.rs  devices.rs  exec_approvals.rs  logs_chat.rs  mod.rs  nodes.rs  secrets.rs  sessions.rs  wizard.rs
core-rs/core/src/security/: mod.rs  tests.rs
core-rs/ml/: Cargo.toml
core-rs/ml/src/: embedder.rs  error.rs  lib.rs  lora.rs  manager.rs  reranker.rs
core-rs/src/: exif.rs  external_content.rs  lib.rs  mime_utils.rs  png.rs  safe_regex.rs
core-rs/src/media/: extensions.rs  mod.rs
core-rs/src/protocol/: error_codes.rs  gen.rs  mod.rs
core-rs/src/security/: mod.rs
core-rs/vega/: Cargo.toml
core-rs/vega/src/: ai.rs  config.rs  editor.rs  lib.rs  mail.rs  session.rs  utils.rs
core-rs/vega/src/commands/: add_action.rs  brief.rs  changelog.rs  compare.rs  contacts.rs  cross.rs  dashboard.rs  embed.rs  health.rs  list.rs  mail_append.rs  memory.rs  mod.rs  person.rs  pipeline.rs  recent.rs  search.rs  show.rs  sync_back.rs  system.rs  tags.rs  template.rs  timeline.rs  update.rs  upgrade.rs  urgent.rs  weekly.rs
core-rs/vega/src/db/: classify.rs  importer.rs  mod.rs  parser.rs  schema.rs
core-rs/vega/src/search/: fts_search.rs  fusion.rs  mod.rs  query_analyzer.rs  semantic.rs
core-rs/vega/src/search/testdata/: search_regression_fixture.json
native/: Cargo.toml  package.json
native/src/: exif.rs  gitignore.rs  lib.rs  png.rs
propus-client/: Cargo.toml
propus-client/src/: main.rs  ws_client.rs
propus-client/ui/: app.slint
tools/highway/: Cargo.toml  README.md
tools/highway/src/: analyzer.rs  cache.rs  main.rs  runner.rs  scheduler.rs
(+9493 files in other folders)
