[workspace]
members = ["cli-rs"]
exclude = ["core-rs"]
resolver = "2"

# Shared lint configuration for CLI workspace crates.
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
map_unwrap_or = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
uninlined_format_args = "warn"
doc_markdown = "warn"
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "deny"
print_stdout = "allow"
print_stderr = "allow"
too_many_arguments = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unused_must_use = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
