[package]
name = "deneb-cli"
version = "4.7.0" # x-release-please-version
edition = "2021"
description = "Deneb CLI — high-performance command-line interface"

[[bin]]
name = "deneb-rs"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "net",
  "io-util",
  "sync",
] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
json5 = "0.4"

# Terminal UI
console = "0.15"
comfy-table = "7"
indicatif = "0.17"
dialoguer = "0.11"

# Utilities
dirs = "6"
open = "5"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
