[workspace]
members = ["core", "vega", "ml"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "2"
regex = "1"
# Fancy regex for patterns with lookahead/lookbehind (e.g., secret ref ID validation).
fancy-regex = "0.14"
once_cell = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
