[workspace]
members = ["core", "vega", "ml", "agent-runtime"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "2"
regex = "1"
# Fancy regex for patterns with lookahead/lookbehind (e.g., secret ref ID validation).
fancy-regex = "0.17"
once_cell = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
rayon = "1.10"

# Shared lint configuration for all workspace crates.
# Crates opt in via `[lints] workspace = true` in their own Cargo.toml.
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# Pedantic subset — useful rules that catch real issues.
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
map_unwrap_or = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
uninlined_format_args = "warn"
doc_markdown = "warn"
# Restriction subset — opt-in rules for safety.
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Allow pragmatic exceptions.
too_many_arguments = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
