# DEPRECATED: Merged into core-rs-napi (unified @deneb/native addon).
# This crate is not in the workspace and is kept only for reference.
[package]
name = "deneb-native-legacy"
version = "0.1.0"
edition = "2021"
description = "DEPRECATED — merged into core-rs-napi"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs core
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "2"

# P1: gitignore pattern matching
globset = "0.4"

# P2: EXIF orientation
kamadak-exif = "0.6"

# P3: PNG encoding
crc32fast = "1"
flate2 = "1"

[build-dependencies]
napi-build = "2"
