[package]
name = "propus-client"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
propus-common = { path = "../propus-common" }
slint = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[build-dependencies]
slint-build = "1"
