[package]
name = "deneb-agent-runtime"
version = "0.1.0"
edition = "2021"
description = "Deneb agent runtime — model selection, agent scope, subagent lifecycle, and prompt composition"

[lib]
# rlib only: consumed by deneb-core (which handles cdylib/staticlib/FFI exports).
crate-type = ["rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
