[package]
name = "deneb-core"
version = "4.5.0" # x-release-please-version
edition = "2021"
description = "Deneb core library — protocol validation, security, and media processing"

[lib]
# cdylib: Node.js native addon (via napi-rs, requires "napi_binding" feature).
# staticlib: Go gateway CGo linking (built with --no-default-features).
# rlib: workspace crate consumers (vega).
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["napi_binding"]
# Enable napi-rs bindings for Node.js native addon builds.
# Disable for CGo static linking: cargo build --release --no-default-features
napi_binding = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
# Enable Vega project search engine (Rust port of Python vega/).
vega = ["dep:deneb-vega"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
memchr = "2"

# Protobuf runtime
prost.workspace = true
prost-types.workspace = true

# Error handling
thiserror.workspace = true

# Node.js FFI via napi-rs (optional, behind "napi_binding" feature)
napi = { version = "2", features = ["napi9", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

# Data parallelism (20-core DGX Spark utilization)
rayon.workspace = true
rustc-hash.workspace = true

# Regex (ReDoS-safe by design)
regex.workspace = true

# Compression (PNG encoding — uses miniz_oxide directly, already a transitive dep)
miniz_oxide = "0.8"

# Hashing (summary ID generation)
sha2.workspace = true

# Timezone-aware timestamps (compaction)
chrono.workspace = true
chrono-tz.workspace = true

# Markdown parsing
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }

# Optional workspace crates
deneb-vega = { path = "../vega", optional = true }


[dev-dependencies]
proptest = "1.5"
tempfile = "3"

[lints]
workspace = true

[build-dependencies]
prost-build = "0.13"
napi-build = { version = "2", optional = true }
