[package]
name = "deneb-core"
version = "4.9.0" # x-release-please-version
edition = "2021"
description = "Deneb core library — protocol validation, security, and media processing"

[lib]
# staticlib: Go gateway CGo linking.
# rlib: workspace crate consumers (vega).
crate-type = ["staticlib", "rlib"]

[features]
# Enable Vega project search engine (Rust port of Python vega/).
vega = ["dep:deneb-vega", "parallel", "deneb-vega?/parallel"]
# Enable rayon parallelism (20-core DGX Spark). Disable for leaner single-core builds.
parallel = ["dep:rayon"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
memchr = "2"

# Protobuf runtime
prost.workspace = true
prost-types.workspace = true

# Error handling
thiserror.workspace = true

# Data parallelism (20-core DGX Spark utilization, optional)
rayon = { workspace = true, optional = true }
rustc-hash.workspace = true

# Regex (ReDoS-safe by design)
regex.workspace = true

# Compression (PNG encoding — uses miniz_oxide directly, already a transitive dep)
miniz_oxide = "0.8"

# Hashing (summary ID generation)
sha2.workspace = true

# Timezone-aware timestamps (compaction)
chrono.workspace = true

# Markdown parsing
pulldown-cmark = { version = "0.12", default-features = false }

# Optional workspace crates
deneb-vega = { path = "../vega", optional = true }


[dev-dependencies]
proptest = "1.5"
tempfile = "3"

[lints]
workspace = true

[build-dependencies]
prost-build = "0.13"
