[package]
name = "deneb-core"
version = "4.17.0" # x-release-please-version
edition = "2021"
description = "Deneb core library — protocol validation, security, and media processing"

[lib]
# staticlib: Go gateway CGo linking.
crate-type = ["staticlib"]

[features]
# Enable local ML inference (GGUF embedding models via llama.cpp).
ml = ["dep:deneb-ml", "deneb-ml?/llama"]
# Enable CUDA GPU acceleration for ML inference (DGX Spark).
cuda = ["ml", "deneb-ml?/cuda"]
# Enable rayon parallelism (20-core DGX Spark). Disable for leaner single-core builds.
parallel = ["dep:rayon"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Protobuf runtime
prost.workspace = true
prost-types.workspace = true

# Error handling
thiserror.workspace = true

# Data parallelism (20-core DGX Spark utilization, optional)
rayon = { workspace = true, optional = true }
rustc-hash.workspace = true

# Regex (ReDoS-safe by design)
regex.workspace = true

# Hashing (summary ID generation)
sha2.workspace = true

# Timezone-aware timestamps (compaction)
chrono.workspace = true

# Optional workspace crates
deneb-ml = { path = "../ml", optional = true }


[lints]
workspace = true

[build-dependencies]
prost-build = "0.13"
