[package]
name = "deneb-ml"
version = "0.1.0"
edition = "2021"
description = "Local ML inference for Deneb (GGUF embedding models via llama.cpp)"

[lib]
crate-type = ["rlib"]

[features]
default = []
llama = ["dep:llama-cpp-2", "dep:libc"]
cuda = ["llama", "llama-cpp-2/cuda"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
libc = { version = "0.2", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }

[lints]
workspace = true
