[package]
name = "deneb-vega"
version = "0.1.0"
edition = "2021"
description = "Deneb Vega — project search engine (Rust port of Python vega/)"

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.33", features = ["bundled", "vtab"] }
regex.workspace = true
log = "0.4"
rayon.workspace = true
rustc-hash.workspace = true
sha2.workspace = true
chrono = { workspace = true, features = ["serde"] }
walkdir = "2"


[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
