[package]
name = "deneb-vega"
version = "0.1.0"
edition = "2021"
description = "Deneb Vega — project search engine (Rust port of Python vega/)"

[lib]
crate-type = ["rlib"]

[features]
default = []
# Enable rayon parallelism for semantic search.
parallel = ["dep:rayon"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.33", features = ["bundled"] }
regex.workspace = true
rayon = { workspace = true, optional = true }
rustc-hash.workspace = true
sha2.workspace = true
chrono = { workspace = true, features = ["serde"] }


[lints]
workspace = true
