[package]
name = "highway"
version = "0.1.0"
edition = "2021"
description = "High-performance test orchestration engine for Deneb"

[[bin]]
name = "highway"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TypeScript parsing & module resolution
oxc_parser = "0.56"
oxc_resolver = "6"
oxc_allocator = "0.56"
oxc_span = "0.56"
oxc_ast = "0.56"

# Hashing (content-addressed cache)
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system (ignore crate includes parallel walker + .gitignore support)
globset = "0.4"
ignore = "0.4"

# Fast substring search (SIMD-accelerated)
memchr = "2"

# Misc
anyhow = "1"
dashmap = "6"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
